--- a/RY-Paris/css/mystyles.css
+++ b/RY-Paris/css/mystyles.css
@@ -1,8 +1,15 @@
 body {
   margin: 0;
 }
+h1 {
+  margin-left: 5%;
+}
+p {
+  margin-left: 5%;
+}
+
 .main-body {
-  max-width: 900px;
+  max-width: 100%;
   margin: 0 auto;
 }
 header {
@@ -10,7 +17,6 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
 }
 .logo {
   margin-left: 5%;
@@ -22,6 +28,140 @@ header {
 }
 .Start {
   background-image: url("images/hero-image.jpg");
-  padding-top: 5%;
+  padding-top: 35%;
+  width: 100%;
+  height: 100%;
 
+}
+#Start-text {
+  /* justify-content: flex;
+  align-items: center; */
+  text-align: center;
+  /* padding-bottom: 80px;
+  background-color: white;
+  max-width: 60%;
+  max-height: 75%;
+  padding-bottom: 0px;
+  padding-right: 0px;
+  padding-left: 0px;
+  margin: 0px; */
+}
+.everyday {
+  margin-left: 5%;
+  margin-right: 5%;
+  margin-bottom: 2%;
+}
+#Everyday-images {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+
+
+}
+.everyday-img {
+  display: flex;
+  width: 275px;
+  height: 200px;
+  background-size: cover;
+  margin-left: 0%;
+  margin-right: 0%;
+}
+.breakfast {
+  margin-left: 5%;
+  margin-right: 0;
+  border: 0;
+  padding: 0;
+}
+.veg {
+  margin: 0;
+  border: 0;
+  padding: 0;
+}
+.cold {
+  margin: 0;
+  border: 0;
+  padding: 0;
+}
+
+.Healthy {
+  background-color: lightgray;
+  padding-top: 2%;
+  padding-bottom: 2%;
+}
+#Healthy-images{
+  display: flex;
+  background-size: cover;
+  text-align: center;
+  max-width: 100%;
+  padding: 0px;
+}
+.white{
+  background-color: white;
+  max-width: 200px;
+  max-height: 100px;
+  margin-top: 0;
+  align-items: center;
+  margin-bottom: 5px;
+}
+.health-img {
+  width: 250px;
+  height: 150px;
+  padding-bottom: 0px;
+}
+.fajitas {
+  margin-left: 5%;
+  border: 0;
+  padding: 15px;
+}
+.muffins {
+  margin: 0;
+  border: 0;
+  padding: 15px;
+}
+.eggplant {
+  margin: 0;
+  border: 0;
+  padding: 15px;
+}
+.chicken {
+  margin: 0;
+  border: 0;
+  padding: 15px;
+}
+
+#whre-images {
+  display: flex;
+  justify-content: space-between;
+  background-size: cover;
+  text-align: center;
+}
+.where-img {
+  max-width: 100%;
+  width: 300px;
+  height: 200px;
+}
+.best-text {
+  display: flex;
+  text-align: center;
+}
+.burger{
+  margin-left: 5%;
+  background-color: lightgray;
+  padding: 15px;
+
+}
+.pizza {
+  background-color: lightgray;
+  padding: 15px;
+}
+.city {
+  background-color: lightgray;
+  margin-right: 5%;
+  padding: 15px;
+}
+footer {
+  background-color: orange;
+  display: flex;
+  justify-content: space-between;
 }
